--- a/src/main/resources/com/unah/memorymanagement/Dynamic-view.fxml
+++ b/src/main/resources/com/unah/memorymanagement/Dynamic-view.fxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
 <AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.unah.memorymanagement.controller.Dynamic">
    <children>
-      <Pane fx:id="PaneParent" layoutX="50.0" layoutY="325.0" prefHeight="150.0" prefWidth="900.0">
+      <Pane fx:id="PaneParentDyamic" layoutX="50.0" layoutY="325.0" prefHeight="150.0" prefWidth="900.0">
          <children>
             <ProgressBar prefHeight="150.0" prefWidth="900.0" progress="0.0" />
          </children>
       </Pane>
-      <Button layoutX="457.0" layoutY="175.0" mnemonicParsing="false" onAction="#prueba" text="Prueba" />
+      <TextField fx:id="dynamicText" layoutX="277.0" layoutY="221.0" />
+      <Button layoutX="457.0" layoutY="221.0" mnemonicParsing="false" onAction="#enterDynamicMemory" text="Ingresar" />
+      <Button layoutX="718.0" layoutY="221.0" mnemonicParsing="false" onAction="#compactMemory" text="Compactar memoria" />
+      <ComboBox fx:id="comboBoxAlgorithms" layoutX="537.0" layoutY="221.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
