--- a/src/main/resources/com/unah/memorymanagement/Dynamic-view.fxml
+++ b/src/main/resources/com/unah/memorymanagement/Dynamic-view.fxml
@@ -2,21 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.unah.memorymanagement.controller.Dynamic">
-   <children>
-      <Pane fx:id="PaneParentDyamic" layoutX="50.0" layoutY="325.0" prefHeight="150.0" prefWidth="900.0">
-         <children>
-            <ProgressBar prefHeight="150.0" prefWidth="900.0" progress="0.0" />
-         </children>
-      </Pane>
-      <TextField fx:id="dynamicText" layoutX="277.0" layoutY="221.0" />
-      <Button layoutX="457.0" layoutY="221.0" mnemonicParsing="false" onAction="#enterDynamicMemory" text="Ingresar" />
-      <Button layoutX="718.0" layoutY="221.0" mnemonicParsing="false" onAction="#compactMemory" text="Compactar memoria" />
-      <ComboBox fx:id="comboBoxAlgorithms" layoutX="537.0" layoutY="221.0" prefWidth="150.0" />
-   </children>
+<AnchorPane prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #4F5D75;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.unah.memorymanagement.controller.Dynamic">
+   <Pane fx:id="PaneParentDyamic" layoutX="50.0" layoutY="325.0" prefHeight="150.0" prefWidth="900.0">
+      <ProgressBar prefHeight="150.0" prefWidth="900.0" progress="0.0" />
+   </Pane>
+   <TextField fx:id="dynamicText" layoutX="141.0" layoutY="229.0" />
+   <Button layoutX="540.0" layoutY="229.0" mnemonicParsing="false" onAction="#enterDynamicMemory" prefHeight="20.0" prefWidth="88.0" style="-fx-background-color: #3c6e71;" text="Ingresar" textFill="WHITE" />
+   <Button layoutX="672.0" layoutY="229.0" mnemonicParsing="false" onAction="#compactMemory" style="-fx-background-color: #fca311;" text="Compactar memoria" textFill="WHITE" />
+   <ComboBox fx:id="comboBoxAlgorithms" layoutX="341.0" layoutY="229.0" prefWidth="150.0" />
+   <Label layoutX="400.0" layoutY="98.0" text="Dynamic" textFill="WHITE">
+      <font>
+         <Font name="JetBrains Mono Extra Bold Nerd Font Complete" size="44.0" />
+      </font>
+   </Label>
 </AnchorPane>
